<resources>
    <string name="app_name">协同计数器</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="permissions_confirm">权限申明</string>
    <string name="permissions_tips_simple">本应用需要所有权限才能运行</string>
    <string name="permissions_tips">本应用需要所有权限才能运行,点击"确认"将退出应用,点击"取消"将继续申请权限</string>
    <string name="user_name">账户</string>
    <string name="pass_word">密码</string>
    <string name="remember_user_name">记住我</string>
    <string name="remember_pass_word">记住密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="not_phone_num">请输入正确的手机号</string>
    <string name="pass_word_lenght_exception">密码长度不合法</string>
    <string name="user_name_already_exist">用户已存在</string>
    <string name="register_failed">注册失败</string>
    <string name="login_failed">登录失败</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="number_of_decisions">决定次数</string>
    <string name="master_decisions">发起了一次决定权,等待对方确认</string>
    <string name="undo">撤销</string>
    <string name="loading_txt">正在加载...</string>
    <string name="load_tips_network_unconnect">无网络连接，点击刷新</string>
    <string name="setting_internet">设置网络</string>
    <string name="bind">绑定</string>
    <string name="binding_collaboration_account">绑定协作账户</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="expection">出现错误</string>
    <string name="bind_success">绑定成功</string>
    <string name="input_phone_num">输入电话号码</string>
    <string name="cancel_bind">退出绑定</string>
    <string name="cancel_bind_summary">还未绑定对方账号，确认退出吗?</string>
    <string name="title_activity_rule">RuleActivity</string>
    <string name="cause">输入理由</string>
    <string name="add_rule_exception">添加失败</string>
    <string name="action_more">更多</string>
    <string name="my_info">我的个人信息</string>
    <string name="change_header">更换头像</string>
    <string name="upload_failed">上传失败</string>
</resources>
